--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js" type="text/javascript"></script>
     <script src="http://johannburkard.de/resources/Johann/jquery.highlight-5.js" type="text/javascript"></script>
   </head>
-  <body>
+  <body class="page home">
     <div id="wrapper">
       <div id="search-container" class="main-containers">
         <div class="inner">
@@ -22,7 +22,7 @@
           </div>
           <div id="search"></div>
         </div>
-        <a href="/wordcloud" class="nav">♥ Word Cloud ♥</a>
+        <a href="/word_cloud" class="nav">♥ Word Cloud ♥</a>
       </div>
 
       <div id="etherpads-container" class="main-containers">
@@ -101,7 +101,7 @@
       );
 
       $.ajax({
-        url: "etherpads.json"
+        url: "data/etherpads.json"
       })
       .done(function(response) {
         var templateData = {
