added nav bar + some code cleanup

--- a/word_cloud.html
+++ b/word_cloud.html
@@ -17,10 +17,17 @@
   </head>
   <body class="page word-cloud">
     <div id="wrapper">
-      <div id="word-cloud-nav">
-      </div>
-      <div id="word-cloud-container" class="main-containers">
-        <div id="cloud"></div>
+      <nav>
+        <h1>hello there :D</h1>
+        <a href="/">keyphrase highlighter</a>
+        <a href="/word_cloud">word cloud</a>
+      </nav>
+      <div id="main">
+        <div id="word-cloud-nav">
+        </div>
+        <div id="word-cloud-container" class="main-containers">
+          <div id="cloud"></div>
+        </div>
       </div>
     </div>
 
