--- a/index.html
+++ b/index.html
@@ -13,23 +13,29 @@
   </head>
   <body class="page home">
     <div id="wrapper">
-      <div id="search-container" class="main-containers">
-        <div class="inner">
-          <div id="search-result">
-            <div>
-              <span class="num-found">0</span> matches found. <a id="reset">RESET</a>
+      <nav>
+        <h1>hello there :D</h1>
+        <a href="/">keyphrase highlighter</a>
+        <a href="/word_cloud">word cloud</a>
+      </nav>
+      <div id="main">
+        <div id="search-container" class="main-containers">
+          <div class="inner">
+            <div id="search-result">
+              <div>
+                <span id="match-num-found">0</span> matches found in <span id="etherpad-num-found">0</span> Etherpads.
+                <a id="reset">RESET</a>
+              </div>
+              <div>
+                
+              </div>
             </div>
+            <div id="search"></div>
           </div>
-          <div id="search"></div>
         </div>
-        <a href="/word_cloud" class="nav">♥ Word Cloud ♥</a>
-      </div>
 
-      <div id="etherpads-container" class="main-containers">
-        <div id="etherpad-result">
-          <div>
-            <h1>Hello there :D</h1>
-            <span class="num-found">0</span> Etherpads shown.
+        <div id="etherpads-container" class="main-containers">
+          <div id="etherpad-result">
           </div>
         </div>
       </div>
@@ -108,9 +114,8 @@
           listItems: response
         };
         $("#etherpad-result").after( template(templateData) );
-        $("#etherpad-result .num-found").text($(".etherpad:visible").length);
+        $("#etherpad-num-found").text($(".etherpad:visible").length);
         $(".keyphrase").on("click", highlighter);
-
       });
 
       var highlighter = function(event) {
@@ -125,16 +130,16 @@
         $(".etherpad").hide();
         $(".highlight").parents(".etherpad").show();
         // update num of matches
-        $("#search-result .num-found").text($(".highlight").length);
-        $("#etherpad-result .num-found").text($(".etherpad:visible").length);
+        $("#match-num-found").text($(".highlight").length);
+        $("#etherpad-num-found").text($(".etherpad:visible").length);
       }
 
       $("#reset").on('click', function() {
         $(".keyphrase.active").removeClass("active");
         $(".etherpad").removeHighlight();
         $(".etherpad").show();
-        $("#search-result .num-found").text($(".highlight").length);
-        $("#etherpad-result .num-found").text($(".etherpad:visible").length);
+        $("#match-num-found").text($(".highlight").length);
+        $("#etherpad-num-found").text($(".etherpad:visible").length);
       });
     </script>
   </body>
