--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
           </div>
         </div>
       </div>
+      <footer>quick side project, not small device friendly ;)</footer>
     </div>
 
     <script type="text/template" class="keyphrases-template">
