--- a/word_cloud.html
+++ b/word_cloud.html
@@ -29,6 +29,7 @@
           <div id="cloud"></div>
         </div>
       </div>
+      <footer>quick side project, not small device friendly ;)</footer>
     </div>
 
      <script type="text/template" class="cloud-nav-template">
